Modifing Image Path

--- a/code/amzonclone2.html
+++ b/code/amzonclone2.html
@@ -75,7 +75,7 @@
                             <div class="box-contentinfo">
                                 <h2>Deals on Shoes</h2>
                             </div>
-                            <div class="box-image" style="background-image: url(/picture/Fuji_Desktop_Single_image_EBF_1x_v8._SY304_CB573698005_.jpg);"></div>
+                            <div class="box-image" style="background-image: url(/amazonclone/picture/Fuji_Desktop_Single_image_EBF_1x_v8._SY304_CB573698005_.jpg);"></div>
                             <p>Shop now</p>
                         </div>
                     </a>
@@ -83,7 +83,7 @@
             <div class="box2 box" >
                 <div class="box-content">
                     <h2>Furniture</h2>
-                    <div class="box-image" style="background-image: url(/picture/box3_image.jpg);"></div>
+                    <div class="box-image" style="background-image: url(/amazonclone/picture/box3_image.jpg);"></div>
                     <p>Shop now</p>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                 <a href="catagares copy.html">
                     <div class="box-content">
                         <h2>Deals on Electronics</h2>
-                        <div class="box-image" style="background-image: url(/picture/box4_image.jpg);"></div>
+                        <div class="box-image" style="background-image: url(/amazonclone/picture/box4_image.jpg);"></div>
                         <p>Shop now</p>
                     </div>
                 </a>
@@ -99,35 +99,35 @@
             <div class="box4 box" >
                 <div class="box-content">
                     <h2>Deals with Makeup </h2>
-                    <div class="box-image" style="background-image: url(/picture/box5_image.jpg);"></div>
+                    <div class="box-image" style="background-image: url(/amazonclone/picture/box5_image.jpg);"></div>
                     <p>Shop now</p>
                 </div>
             </div>
             <div class="box5 box" >
                 <div class="box-content">
                     <h2>Health & Personal Care</h2>
-                    <div class="box-image" style="background-image: url(/picture/box2_image.jpg);"></div>
+                    <div class="box-image" style="background-image: url(/amazonclone/picture/box2_image.jpg);"></div>
                     <p>Shop now</p>
                 </div>
             </div>
             <div class="box6 box" >
                 <div class="box-content">
                     <h2>Deals on Shoes</h2>
-                    <div class="box-image" style="background-image: url(/picture/box1_image.jpg);"></div>
+                    <div class="box-image" style="background-image: url(/amazonclone/picture/box1_image.jpg);"></div>
                     <p>Shop now</p>
                 </div>
             </div>
             <div class="box7 box" >
                 <div class="box-content">
                     <h2>Pet Care</h2>
-                    <div class="box-image" style="background-image: url(/picture/box6_image.jpg);"></div>
+                    <div class="box-image" style="background-image: url(/amazonclone/picture/box6_image.jpg);"></div>
                     <p>Shop now</p>
                 </div>
             </div>
             <div class="box8 box" >
                 <div class="box-content">
                     <h2>Deals with Toys</h2>
-                    <div class="box-image" style="background-image: url(/picture/Fuji_Desktop_Single_image_EBF_1x_v3._SY304_CB573698005_.jpg);"></div>
+                    <div class="box-image" style="background-image: url(/amazonclone/picture/Fuji_Desktop_Single_image_EBF_1x_v3._SY304_CB573698005_.jpg);"></div>
                     <p>Shop now</p>
                 </div>
             </div>
